links found by Yunus

--- a/IQPbibliography.bib
+++ b/IQPbibliography.bib
@@ -215,6 +215,19 @@
  @String{WHFreeman = "W. H. Freeman and Co." }
 
 %Entries
+
+@misc{aiInit,
+	author={HarvardMIT},
+	howpublished = {\url{https://aiethicsinitiative.org/}}
+	annotate={There is a description of projects here.}
+}
+@misc{AIInclusion,
+	author={MITMediaLab},
+	howpublished={https://aiandinclusion.org/},
+annotate={ the uneven access to and impact of AI-based technologies on marginalized populations; This mentions yet more organizations.}
+}
+
+
 @misc{elsi,
 author={elsi},
 howpublished={url{https://www.genome.gov/10001618/the-elsi-research-program/\#al-1}}
@@ -228,6 +241,14 @@ year=2015,
 howpublished={\url{https://www.technologyreview.com/s/542626/why-self-driving-cars-must-be-programmed-to-kill/}}
 }
 %2018
+@incollection{lee2018armed,
+	title={Armed drones: automation, autonomy, and ethical decision-making},
+	author={Lee, Peter},
+	booktitle={The Political Economy of Robots},
+	pages={291--315},
+	year={2018},
+	publisher={Springer}
+}
 @article{pardo2018computational,
 	title={Computational Thinking between Philosophy and STEM. Programming Decision Making applied to the Behaviour of “Moral Machines” in Ethical Values Classroom},
 	author={Pardo, Antonio Miguel Seoane},
